# FlashNote

./: README.md  event_handlers.py  main.py  main.spec  pyproject.toml  resource.py  sticky_note.py  text_editor.py  ui_components.py  version_info.txt
resources/: resources.qrc
