[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Flush"
version = "1.1.0"
authors = [
    { name="Ash Xiong", email="songtaoheying@outlook.com" },
]
description = "正如其名,闪记"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/songtaoheying/FlashNote"
Issues = "https://github.com/songtaoheying/FlashNote/issues"
